# polymarket_index

./: .env.example  .gitignore  README.md  SESSION_HANDOFF.md  introduction.md  pyproject.toml
backend/app/: main.py
backend/scripts/: api_probe.py  archive_price_data.py  backfill_wallet_data.py  benchmark_dashboard.py  calculate_pnl.py  check_sampling_health.py  db_migrate.py  generate_alerts.py  ingest_market_data.py  run_continuous_sampling.py  run_paper_trading.py  run_sampling_maintenance.py  score_wallets.py
backend/tests/: test_continuous_sampling.py  test_dashboard_api.py  test_health.py  test_market_data_normalization.py  test_paper_trading.py  test_pnl_engine.py  test_price_data_normalization.py  test_sampling_maintenance.py  test_sampling_pools.py  test_schema_migration.py  test_smart_score.py  test_wallet_data_normalization.py
deploy/: backup_postgres.sh
deploy/systemd/: polymarket-api.service  polymarket-backup.service  polymarket-backup.timer  polymarket-health.service  polymarket-health.timer  polymarket-maintenance.service  polymarket-maintenance.timer  polymarket-sampler.service
docs/: api-probe-report.md  data-dictionary.md  market-data-ingestion-report.md  pnl-engine-report.md  price-archive-report.md  smart-score-report.md  smart-score-v2-report.md  vps-sampling-runbook.md  wallet-backfill-report.md  week07-acceptance-report.md  week08-acceptance-report.md
docs/adr/: 0001-tech-stack.md
docs/samples/: README.md  (+2 more)
frontend/: README.md  package-lock.json  package.json
frontend/app/: page.tsx  (+2 more)
infra/: Dockerfile.backend  docker-compose.yml
(+44 files in other folders)
