[project]
name = "polymarket-wallet-tracker"
version = "0.1.0"
description = "Read-only Polymarket wallet tracking and scoring research system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
    "httpx[socks]>=0.27,<1.0",
    "structlog>=24.0,<26.0",
]

[project.optional-dependencies]
probe = [
    "websockets>=12.0,<16.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.5,<1.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["docs*", "frontend*", "infra*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

